--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="titulo-centralizado">Barbearia Alura</h1>
         </header>
         
-        <img id="banner" src="banner.jpg" alt="barbearia">
+        <img id="banner" src="assets/banner.jpg" alt="barbearia">
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -33,7 +33,7 @@
                 <li class="itens">Profissionais qualificados</li>
             </ul>
 
-            <img class="imagem-beneficios" src="beneficios.jpg" alt="homem fazendo a barba">
+            <img class="imagem-beneficios" src="/assets/beneficios.jpg" alt="homem fazendo a barba">
         </div>
 
     </body>
