corrigindo caminho assets

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="itens">Profissionais qualificados</li>
             </ul>
 
-            <img class="imagem-beneficios" src="/assets/beneficios.jpg" alt="homem fazendo a barba">
+            <img class="imagem-beneficios" src="assets/beneficios.jpg" alt="homem fazendo a barba">
         </div>
 
     </body>
